--- a/saisies/reservation_formulaires.html
+++ b/saisies/reservation_formulaires.html
@@ -4,7 +4,7 @@
 <select name="#ENV{nom}[(#ENV{multiple}|?{\[\]})]" id="champ_[(#ENV{nom}|saisie_nom2classe)]"[ class="(#ENV{class})"][(#ENV{multiple}|oui) multiple="multiple" size="#ENV{size,10}"][ disabled="(#ENV{disable})"]>
 	[(#ENV{cacher_option_intro}|ou{#ENV{multiple}}|non)
 		<option value="">[(#ENV{option_intro})]</option>]
-	<BOUCLE_reservation_formulaires(RESERVATION_FORMULAIRES){id_reservation_formulaire?}{statut?}{recherche?}{tout}{par num titre, titre}>
+	<BOUCLE_reservation_formulaires(RESERVATION_FORMULAIRES){id_reservation_formulaire?}{reservation_formulaire_configurations_liens.id_reservation_formulaire_configuration?}{statut?}{recherche?}{tout}{par num titre, titre}>
 		[(#ENV{multiple}|oui)
 		<option value="#ID_RESERVATION_FORMULAIRE"[(#ID_RESERVATION_FORMULAIRE|in_array{#ENV{valeur_forcee,#GET{valeur,#ENV{defaut,#ARRAY}}}}|oui) selected="selected"]>#TITRE</option>]
 		[(#ENV{multiple}|non)
