Permettre de choisir ou afficher les fomulaires

--- a/formulaires/configurer_reservations_formulaires.html
+++ b/formulaires/configurer_reservations_formulaires.html
@@ -10,9 +10,9 @@
 		#ACTION_FORMULAIRE{#ENV{action}}
 
 		<div class="editer-groupe">
-			[(#SAISIE{input, exemple,
-				label=<:reservations_formulaires:cfg_exemple:>,
-				explication=<:reservations_formulaires:cfg_exemple_explication:>})]
+			[(#SAISIE{choisir_objets, objets,
+				label=<:reservations_formulaires:configurer_objets_label:>,
+				explication=<:reservations_formulaires:configurer_objets_label:>})]
 		</div>
 
 		<input type="hidden" name="_meta_casier" value="reservations_formulaires" />
