--- a/inclure/formulaires_reservation.html
+++ b/inclure/formulaires_reservation.html
@@ -17,7 +17,7 @@
 	#SET{options, #ENV**{option,#ARRAY{}}
 		|array_merge{
 			#ARRAY{
-				configurations,#GET{configurations}
+				configurations,#GET{configurations},
 				id_reservation_formulaire, #ID_RESERVATION_FORMULAIRE
 			}
 		}
