une seule traduction pour titre

--- a/formulaires/editer_reservation_formulaire_configuration.html
+++ b/formulaires/editer_reservation_formulaire_configuration.html
@@ -9,7 +9,7 @@
 		<div class="editer-groupe">
 
 			[(#SAISIE{input, titre, obligatoire=oui,
-				label=<:reservation_formulaire_configuration:champ_titre_label:>})]
+				label=<:reservation_formulaire:champ_titre_label:>})]
 
 			[(#SAISIE{textarea, descriptif,
 				label=<:reservation_formulaire_configuration:champ_descriptif_label:>})]
