--- a/prive/objets/liste/reservation_formulaire_configurations.html
+++ b/prive/objets/liste/reservation_formulaire_configurations.html
@@ -11,7 +11,7 @@
 	<thead>
 		<tr class="first_row">
 			<th class="picto" scope="col"></th>
-			<th class="titre" scope="col">[(#TRI{titre,<:reservation_formulaire_configuration:champ_titre_label:>,ajax})]</th>
+			<th class="titre" scope="col">[(#TRI{titre,<:reservation_formulaire:champ_titre_label:>,ajax})]</th>
 			<th class="date" scope="col">[(#TRI{date,<:date:>,ajax})]</th> 
 			<th class="id" scope="col">[(#TRI{id_reservation_formulaire_configuration,<:info_numero_abbreviation:>,ajax})]</th>
 		</tr>
