--- a/prive/objets/contenu/reservation_formulaire_configuration.html
+++ b/prive/objets/contenu/reservation_formulaire_configuration.html
@@ -1,6 +1,6 @@
 <BOUCLE_reservation_formulaire_configuration(RESERVATION_FORMULAIRE_CONFIGURATIONS){id_reservation_formulaire_configuration}>
 [<div class="champ contenu_titre[ (#TITRE*|strlen|?{'',vide})]">
-	<label><:reservation_formulaire_configuration:champ_titre_label:> : </label>
+	<label><:reservation_formulaire:champ_titre_label:> : </label>
 	<span dir="#LANG_DIR" class="#EDIT{titre} titre">(#TITRE)</span>
 </div>]
 
