--- a/prive/objets/liste/reservation_formulaire_configurations_lies.html
+++ b/prive/objets/liste/reservation_formulaire_configurations_lies.html
@@ -32,7 +32,7 @@ a mis a jour la valeur avec la page reelle]
 		[<tr><td colspan="4"><p class="pagination">(#GET{p})</p></td></tr>]
 
 		<tr class="first_row">
-			<th class="titre" scope="col">[(#TRI{multi titre,<:reservation_formulaire_configuration:champ_titre_label:>,ajax})]</th>
+			<th class="titre" scope="col">[(#TRI{multi titre,<:reservation_formulaire:champ_titre_label:>,ajax})]</th>
 			<th class="action" scope="col"></th>
 		</tr>
 	</thead>
