--- a/modeles/formulaires_reservation.html
+++ b/modeles/formulaires_reservation.html
@@ -1,5 +1,5 @@
 <BOUCLE_formulaires(RESERVATION_FORMULAIRES) {objet} {id_objet}>
-	#SET{id_evenement,#ARRAY} #SET{id_article,#ARRAY} #SET{retour,#ARRAY} #SET{configurations,#ARRAY}
+	#SET{id_evenement,#ENV{id_evenement}} #SET{id_article,#ENV{id_article}} #SET{retour,#ARRAY} #SET{configurations,#ARRAY}
 	<BOUCLE_configurations(RESERVATION_FORMULAIRE_CONFIGURATIONS) {id_reservation_formulaire}>
 	#SET{configuration,#CONFIGURATION|json_decode{1}}
 	[(#GET{configuration}|table_valeur{traitement}|=={options}|oui)
@@ -11,8 +11,6 @@
 		}
 	]
 	[(#TYPE|=={rf_limiter}|oui)
-		#SET{id_evenement,#ENV{id_evenement}}
-		#SET{id_article,#ENV{id_article}}
 		#SET{objet,#GET{configuration}|table_valeur{choix_objet}}
 		#SET{limite,#GET{configuration}|table_valeur{limiter_#GET{objet}}}
 		[(#GET{objet}|=={rubrique}|oui)
@@ -34,7 +32,6 @@
 			}
 		}
 	}
-
 	<INCLURE{fond=modeles/reservation,
 		env,
 		id_evenement=#GET{id_evenement},
