--- a/prive/squelettes/contenu/reservation_formulaire.html
+++ b/prive/squelettes/contenu/reservation_formulaire.html
@@ -42,10 +42,12 @@
 	<BOUCLE_objetslies(spip_reservation_formulaires_liens){id_reservation_formulaire}{0,1}><h3><:reservation_formulaire:titre_objets_lies_reservation_formulaire:></h3></BOUCLE_objetslies>
 
 	<BOUCLE_listeobjets(spip_reservation_formulaires_liens){id_reservation_formulaire}{fusion objet}{par objet}>
+		[(#REM)
 		#SET{table,#OBJET|table_objet}
 		[(#SET{titre,[#OBJET:info_(#GET{table})_liees_reservation_formulaire]})]
 		[(#SET{liste,#VAL{prive/objets/liste/#GET{table}}|trouver_fond|?{#GET{table},objets_lies_reservation_formulaire}})]
-		<INCLURE{fond=prive/objets/liste/#GET{liste},objet,id_reservation_formulaire,ajax,env} />
+		Faudrait récupérer la possibilité d'afficher les objets sélectionné dans la config, pour le moment affiche les objets auquel le formulaire est directement attaché]
+		<INCLURE{fond=prive/objets/liste/objets_lies_reservation_formulaire,objet,id_objet,id_reservation_formulaire,ajax,env} />
 	</BOUCLE_listeobjets>
 </div>
 
